--- a/nestjs-api/docker-compose.yaml
+++ b/nestjs-api/docker-compose.yaml
@@ -7,11 +7,11 @@ services:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=nest
 
-  # rabbitmq:
-  #   image: rabbitmq:3.12-management
-  #   ports:
-  #     - 15672:15672
-  #     - 5672:5672
-  #   environment:
-  #     - RABBITMQ_DEFAULT_USER=admin
-  #     - RABBITMQ_DEFAULT_PASS=admin
+  rabbitmq:
+    image: rabbitmq:3.12-management
+    ports:
+      - 15672:15672
+      - 5672:5672
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=admin
